<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="307dp"
        android:layout_height="292dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:srcCompat="@drawable/girl" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="390dp"
        android:layout_height="491dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.156"
        app:srcCompat="@drawable/bottom_white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:padding="10dp"
        android:text="@string/g_venli_pati_ye_n_t_tho_geldiniz"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="334dp"
        android:layout_height="142dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/evcil_dostlar_n_z_i_in_nen_iyi_bak_c_lar_bulman_n_kolay_ve_keyifli_yolu_ng_venli_pati_uygulamas_yla_nt_yl_arkada_lar_n_z_n_m_kemmel_bak_m_art_k_parmaklar_n_z_n_ucunda"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@drawable/background_button_intro"
        android:gravity="center"
        android:text="@string/tget_started"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>